--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Beachlab
-description: A small website for the Beachland
+title: [Beachlab]
+description: [A small website for the Beachland]
