--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
+title: Beachlab
+description: A small website for the Beachland
 theme: jekyll-theme-minimal
-title: [Beachlab]
-description: [A small website for the Beachland]
