--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Beachlab
-logo: /asset/profile.jpg
+logo: /asset/beach_lab.jpg
 description: A small website for the Beachlab
 theme: jekyll-theme-minimal
