--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Beachlab
 logo: /asset/beach_lab.jpg
-description: A small website for the Beachlab
+description: Contact: daniel.harris@uq.edu.au
 theme: jekyll-theme-minimal
