--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Beachlab
 logo: /asset/profile.jpg
-description: Contact: daniel.harris@uq.edu.au
+description: daniel.harris@uq.edu.au
 theme: jekyll-theme-minimal
