--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Beachlab
 logo: /asset/wave_colour.jpg
 description: daniel.harris@uq.edu.au
-theme: jekyll-theme-minimal
+theme: creative-theme-jekyll
