--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Beachlab
-logo: /asset/beachlab_logo.jpg
+logo: /asset/beachlab_logo.tif
 description: daniel.harris@uq.edu.au
 theme: jekyll-theme-minimal
