--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Beachlab
-logo: /asset/beachlab_logo.tif
+title: Dr Daniel Harris
+logo: /asset/beachlab_logo.jpg
 description: daniel.harris@uq.edu.au
 theme: jekyll-theme-minimal
