--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Dr Daniel Harris
-logo: /asset/beachlab_logo.jpg
-description: daniel.harris@uq.edu.au
+title: Beachlab
+logo: /asset/wave_colour.jpg
+description: School of Earth and Environmental Sciences, The University of Queensland, daniel.harris@uq.edu.au
 theme: jekyll-theme-minimal
