--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Beachlab
 logo: /asset/wave_colour.jpg
-description: School of Earth and Environmental Sciences, The University of Queensland, daniel.harris@uq.edu.au
+description: Riding waves since 2017...
 theme: jekyll-theme-minimal
